@@ -18,6 +18,7 @@
 package io.vertigo.datamodel.structure.definitions;
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
@@ -35,9 +36,11 @@ public final class Properties {
 	Properties(final Map<Property<?>, Object> properties) {
 		Assertion.check().isNotNull(properties);
 		//-----
-		this.properties = properties.isEmpty()
-				? Collections.emptyMap()
-				: Map.copyOf(properties);
+		if (properties.isEmpty()) {
+			this.properties = Collections.emptyMap();
+		} else {
+			this.properties = Collections.unmodifiableMap(new HashMap<>(properties));
+		}
 	}
 
 	/**
